@@ -1,3 +1,9 @@
+2009-04-29  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* src/hildon-font-selection-dialog.c
+	(hildon_font_selection_dialog_set_property): Fail when the "family"
+	property is set to NULL.
+
 2009-04-28  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-color-chooser.c (hildon_color_chooser_set_color): Add
